--- a/HTML/Landing_Page.html
+++ b/HTML/Landing_Page.html
@@ -38,7 +38,12 @@
 
     <main>
         <div class="container-fluid principal">
-            <img src="..\Images\Logo.png" alt="Imagem de destaque" class="logo2">
+            <div class="circle">
+                <img src="..\Images\Logo.png" alt="Imagem de destaque" class="logo2">
+            </div>
+            <div class="subtitul">
+                Receitas Deliciosas para Você
+            </div>
         </div>
         <!--
             <div class="container" >
