--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
                     </ul>
                 </div>
                 <div class="col-md-6 text-center">
-                    <p>Entre em contato:</p>
+                    <p>Get in touch:</p>
                     <p>Email: <a href="mailto:diogo.reis@ipvc.pt" class="email">diogo.reis@ipvc.pt</a></p>
-                    <p>Telefone: (123) 456-7890</p>
+                    <p>Telephone: (123) 456-7890</p>
                 </div>
                 <div class="col-md-12 text-center mt-3">
-                    <p>&copy; 2023 Diogo Reis. Todos os direitos reservados.</p>
+                    <p>&copy; 2023 Diogo Reis. All rights reserved.</p>
                 </div>
             </div>
         </div>
